--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -16,7 +16,7 @@ $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       #ff752f;
+$text-color:       #000000;
 $background-hr:	   #000000;
 $background-color: 	#dcd8ce;
 $background-darker: #000000;
