--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -34,7 +34,7 @@ $player-play-color:		lighten($brand-color, 5%);
 $player-progress-height: 10px;
 
 $tile-bgcolor:	   $brand-color;
-$tile-color:	   #ffffff;
+$tile-color:	   darken($brand-color, 40%);
 $tile-size:		   56px;
 $tile-size-large:  64px;
 $tile-border-radius:	2px;
