--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -18,7 +18,7 @@ $spacing-unit:     30px;
 
 $text-color:       #000000;
 $background-hr:	   #000000;
-$background-color: 	#dcd8ce;
+$background-color: 	#ffffff;
 $background-darker: #000000;
 $brand-color:	   	#bda573;
 $anchor-hover-color:	lighten($brand-color, 30%);
