--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -361,7 +361,7 @@
 
 .post-title-episode {
     .post-header-stop-id {
-        color: #ffffff;
+        color: #bda573;
         display: inline-block;
         font-size: 26px;
         line-height: 26px;
