--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -80,7 +80,7 @@
     border: none;
     background: $tile-bgcolor;
     border-radius: 5px;
-    color: $text-color;
+    color: #ffffff;
     padding: 0.5em 1em;
     font-family: $base-font-family;
     font-size: $base-font-size;
