--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -37,7 +37,7 @@
 
 .welcome .slick .prompt {
     background-color: $tile-bgcolor;
-    color: #000000;
+    color: #ffffff;
     max-width: 450px;
     margin: 0 auto 0.5em auto;
     padding: 0.25em 0.5em;
