--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -37,7 +37,7 @@
 
 .welcome .slick .prompt {
     background-color: $tile-bgcolor;
-    color: #ffffff;
+    color: white;
     max-width: 450px;
     margin: 0 auto 0.5em auto;
     padding: 0.25em 0.5em;
@@ -80,7 +80,7 @@
     border: none;
     background: $tile-bgcolor;
     border-radius: 5px;
-    color: #000000;
+    color: $text-color;
     padding: 0.5em 1em;
     font-family: $base-font-family;
     font-size: $base-font-size;
@@ -133,6 +133,32 @@
 .connected-page {
     h1, h2, h3, h4, h5, h6, p {
         text-align: center;
+    }
+}
+
+/********************
+ Partner Logos
+********************/
+
+.partner-logos {
+    display: block;
+    border-top: 1px solid $background-hr;
+    padding-top: 1em;
+    text-align: right;
+    img {
+        display: inline-block;
+        margin-bottom: 1em;
+        opacity: 0.2;
+        transition: 0.3s;
+    }
+    img:hover {
+        opacity: 1;
+    }
+    .logo {
+        width: auto;
+        max-height: 50px;
+        margin-left: 2em;
+        float: right;
     }
 }
 
