--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -17,7 +17,7 @@ $base-line-height: 1.5;
 $spacing-unit:     30px;
 
 $text-color:       #000000;
-$background-hr:	   #000000;
+$background-hr:	   #ffffff;
 $background-color: 	#ffffff;
 $background-darker: #000000;
 $brand-color:	   	#bda573;
