--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -19,7 +19,7 @@ $spacing-unit:     30px;
 $text-color:       #000000;
 $background-hr:	   #ffffff;
 $background-color: 	#ffffff;
-$background-darker: #000000;
+$background-darker: #ffffff;
 $brand-color:	   	#bda573;
 $anchor-hover-color:	lighten($brand-color, 30%);
 
