--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -17,9 +17,9 @@ $base-line-height: 1.5;
 $spacing-unit:     30px;
 
 $text-color:       #000000;
-$background-hr:	   #ffffff;
+$background-hr:	   #000000;
 $background-color: 	#ffffff;
-$background-darker: #ffffff;
+$background-darker: #000000;
 $brand-color:	   	#bda573;
 $anchor-hover-color:	lighten($brand-color, 30%);
 
