--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -387,7 +387,7 @@
 
 .post-title-episode {
     .post-header-stop-id {
-        color: #ffffff;
+        color: #000000;
         display: inline-block;
         font-size: 26px;
         line-height: 26px;
