--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -14,9 +14,9 @@
 	      	<div class="slick-container">
 		      	<div class="slick">
 		    		<div>
-						<p>Welcome to the Static Museum Audio Guide theme for Jekyll. You'll need to replace the images on this page with screenshots of your final guide.</p>
+						<p>Welcome to the Lusail Museum Audio Guide.</p>
 
-						<p>Replace this mark-up with some nice onboarding particular to your tour.</p>
+						<p>On this tour, you will experience a familiar world through the lens of Orientalism.</p>
 						<div class="prompt slick-slide-to-next">Swipe to read more
 						<span class="button-forward">
 	      					<img src="{{ site.baseurl }}/assets/img/icons/button_forward.png"/>
@@ -26,19 +26,19 @@
 					<div>
 						<p>Look out for the headphones symbol in the exhibition and then hit the number you&rsquo;re in front of to begin.</p>
 						<p>
-							<img class="welcome-example-icon slick-slide-to-next" src="{{ site.baseurl }}/assets/img/welcome/example-headphones-icon.gif"/>
+							<img class="welcome-example-icon slick-slide-to-next" src="{{ site.baseurl }}assets/img/welcome/headphones.jpg"/>
 						</p>
 					</div>
 					<div>
 						<p>Press the menu icon at the top right of the screen to change stops.</p>
 						<p>
-							<img class="screenshot slick-slide-to-next" src="{{ site.baseurl }}/assets/img/welcome/highlight-bento-menu.gif"/>
+							<img class="screenshot slick-slide-to-next" src="{{ site.baseurl }}/assets/img/welcome/Menu image.jpg"/>
 						</p>
 					</div>
 					<div>
 						<p>Use the buttons at the bottom of the screen to move to the next or previous stop.</p>
 						<p>
-							<img class="screenshot slick-slide-to-next" src="{{ site.baseurl }}/assets/img/welcome/highlight-footer-buttons.gif"/>
+							<img class="screenshot slick-slide-to-next" src="{{ site.baseurl }}/assets/img/welcome/navigation.jpg"/>
 						</p>
 					</div>
 					<div>
