--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -137,32 +137,6 @@
 }
 
 /********************
- Partner Logos
-********************/
-
-.partner-logos {
-    display: block;
-    border-top: 1px solid $background-hr;
-    padding-top: 1em;
-    text-align: right;
-    img {
-        display: inline-block;
-        margin-bottom: 1em;
-        opacity: 0.2;
-        transition: 0.3s;
-    }
-    img:hover {
-        opacity: 1;
-    }
-    .logo {
-        width: auto;
-        max-height: 50px;
-        margin-left: 2em;
-        float: right;
-    }
-}
-
-/********************
  Site header
  *******************/
 .site-header-wrapper {
@@ -387,7 +361,7 @@
 
 .post-title-episode {
     .post-header-stop-id {
-        color: #000000;
+        color: #ffffff;
         display: inline-block;
         font-size: 26px;
         line-height: 26px;
