--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -137,6 +137,32 @@
 }
 
 /********************
+ Partner Logos
+********************/
+
+.partner-logos {
+    display: block;
+    border-top: 1px solid $background-hr;
+    padding-top: 1em;
+    text-align: right;
+    img {
+        display: inline-block;
+        margin-bottom: 1em;
+        opacity: 0.2;
+        transition: 0.3s;
+    }
+    img:hover {
+        opacity: 1;
+    }
+    .logo {
+        width: auto;
+        max-height: 50px;
+        margin-left: 2em;
+        float: right;
+    }
+}
+
+/********************
  Site header
  *******************/
 .site-header-wrapper {
