--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -16,7 +16,7 @@
 		    		<div>
 						<p>Welcome to the Lusail Museum Audio Guide.</p>
 
-						<p>On this tour, you will experience a familiar world through the lens of Orientalism.</p>
+						<p>This is a student-built prototype for Lusail Museum. On this tour, you will experience a familiar world through the lens of Orientalism.</p>
 						<div class="prompt slick-slide-to-next">Swipe to read more
 						<span class="button-forward">
 	      					<img src="{{ site.baseurl }}/assets/img/icons/button_forward.png"/>
